# ihaskell-frames

./: ihaskell-frames.cabal
IHaskell/Display/: Frames.hs
