name:                ihaskell-frames
version:             0.1.0.0
synopsis:            IHaskell display functions for the Frames package
license:             BSD3
author:              Sam Anklesaria
maintainer:          amsay@amsay.net
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     IHaskell.Display.Frames
  build-depends:       base >= 4.7 && < 5, Frames, pipes, foldl, blaze-html,
                       vinyl, ihaskell, ihaskell-blaze
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bogiebro/ihaskell-frames
